# fastviteai-starter

./: .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  manual_links.txt.template  monitoring_list.txt.template  pyproject.toml  setup.py
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6c8b5aea510d_create_todos_table.py
backend/app/core/: base_schema.py  database.py  exceptions.py  middleware.py  repository.py  settings.py  test_repository.py
backend/app/features/: README.md
backend/app/features/health/: router.py  schemas.py  service.py  test_health_service.py
backend/app/features/todos/: conftest.py  models.py  repository.py  router.py  schemas.py  service.py  test_todo_service.py
backend/docs/: gotchas.md
backend/tests/: conftest.py  test_main.py
backend/tests/core/: test_settings.py
backend/tests/integration/: test_health.py  test_todos.py
bmad/_cfg/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
bmad/_cfg/ides/: claude-code.yaml
bmad/bmb/: config.yaml
bmad/bmm/: config.yaml
bmad/cis/: config.yaml
bmad/core/: config.yaml
dagster_project/: assets.py  definitions.py
dagster_project/assets/: __init__.py  content_extraction.py  link_ingestion.py  summarization.py
dagster_project/jobs/: __init__.py  manual_pipeline.py  monitoring_pipeline.py
dagster_project/ops/: __init__.py  html_extractor.py  watchers.py  youtube_extractor.py
dagster_project/resources/: __init__.py  openai.py  openrouter_client.py
dagster_project/schedules/: __init__.py  monitoring_schedule.py
docs/: NOTES.md  PRD.md  architecture.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-10-24.md  brainstorming-session-results-shopify-2025-10-24.md  client-call-guide-if-not-php.md  client-call-guide-recommendation.md  comparison-langgraph-vs-php-frameworks.md  data-models.md  development-guide.md  epics.md  estimation-parallel-delivery-2025-10-24.md  feature-parity-langchain-vs-llphant.md  implementation-paths-rag-tts.md  index.md  input.md  project-overview.md  project-scan-report.json  research-domain-2025-10-26.md  research-technical-2025-10-24.md  research-technical-2025-10-25.md  research-technical-medusajs-2025-10-24.md  source-tree-analysis.md  sprint-status.yaml  tech-spec-epic-1.md  tech-spec.md
docs/inputs/: IDEA.md  answers.md  implementation.md  init.md
docs/outputs/: medusajs-technical-evaluation.md
docs/stories/: story-link-pipeline-1.1.context.xml  story-link-pipeline-1.1.md  story-link-pipeline-1.context.xml  story-link-pipeline-1.md  story-link-pipeline-2.context.xml  story-link-pipeline-2.md  story-link-pipeline-3.context.xml  story-link-pipeline-3.md
frontend/: .env.example  Dockerfile  Makefile  README.md  biome.json  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/docs/: gotchas.md
frontend/public/: mockServiceWorker.js
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: Navigation.tsx  PriorityBadge.tsx  StatusBadge.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/features/: README.md
frontend/src/features/status/: StatusPage.tsx
frontend/src/features/status/components/: StatusCard.tsx  StatusOverview.tsx
frontend/src/features/status/hooks/: useHealthStatus.tsx
frontend/src/features/todos/: TodoPage.tsx
frontend/src/features/todos/components/: TodoFilters.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx  TodoStats.tsx
frontend/src/features/todos/schemas/: todo.schema.ts
frontend/src/lib/: cn.ts  utils.ts
frontend/src/lib/api/: client.test.ts  client.ts
frontend/src/routes/: README.md  __root.tsx  health.tsx  index.tsx  todos.tsx
frontend/src/test/: HealthCheck.tsx
frontend/src/tests/: msw.test.ts  setup.ts
frontend/src/tests/mocks/: handlers.ts  server.ts
tests/: __init__.py  test_environment.py  test_html_extractor.py  test_link_ingestion.py  test_openai.py  test_openrouter_client.py  test_storage.py  test_youtube_extractor.py
tests/fixtures/: sample_article.html  sample_links.txt  sample_rss_feed.xml
tests/integration/: test_jobs.py  test_pipeline_integration.py  test_project_setup.py
